# gbot

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CLI.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  config.example.yaml  config.yaml  docker-compose.yml  pyproject.toml  roles.yaml  senaryolar.md
.github/workflows/: ci.yml
docs/: CLI.md  channels.md  mimari_kararlar.md  rbac_mimari.md  scheduling.md  session_summarization.md
gbot_cli/: __init__.py  client.py  commands.py  credentials.py  output.py  repl.py  slash_commands.py
graphbot/: __init__.py  __main__.py  __version__.py
graphbot/agent/: __init__.py  context.py  delegation.py  graph.py  light.py  nodes.py  permissions.py  runner.py  state.py
graphbot/agent/skills/: __init__.py  loader.py
graphbot/agent/skills/builtin/summarize/: SKILL.md
graphbot/agent/skills/builtin/weather/: SKILL.md
graphbot/agent/tools/: __init__.py  cron_tool.py  delegate.py  filesystem.py  memory_tools.py  messaging.py  registry.py  reminder.py  search.py  shell.py  web.py
graphbot/api/: __init__.py  admin.py  app.py  auth.py  deps.py  routes.py  ws.py
graphbot/cli/: commands.py
graphbot/core/background/: __init__.py  heartbeat.py  worker.py
graphbot/core/channels/: __init__.py  base.py  discord.py  feishu.py  telegram.py  waha_client.py  whatsapp.py
graphbot/core/config/: __init__.py  loader.py  schema.py
graphbot/core/cron/: __init__.py  scheduler.py  types.py
graphbot/core/providers/: base.py  litellm.py  litellm_llm.py  openrouter_llm.py
graphbot/memory/: __init__.py  models.py  store.py
graphbot/rag/: __init__.py  indexer.py  retriever.py
images/: architecture.excalidraw
scripts/: docker-traffic.sh
tests/: test_admin_api.py  test_agent.py  test_api.py  test_auth.py  test_background.py  test_channels.py  test_cli.py  test_cli_client.py  test_cli_repl.py  test_config.py  test_context.py  test_delegation.py  test_e2e.py  test_integration.py  test_light_agent.py  test_permissions.py  test_provider.py  test_rag.py  test_recurring_reminder.py  test_reminder.py  test_session_summary.py  test_skills.py  test_store.py  test_tools.py  test_whatsapp.py  test_ws_events.py
workspace/: AGENT.md
